--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <EditText
+        android:id="@+id/num1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <EditText
+        android:id="@+id/num2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/out"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
 
     <Button
+        android:onClick="plus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/plus" />
 
     <Button
+        android:onClick="minus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/minus" />
