--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,17 @@
         android:layout_height="wrap_content"
         android:text="@string/minus" />
 
+    <Button
+        android:onClick="multiplication"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/multiplication" />
+
+    <Button
+        android:onClick="division"
+        android:id="@+id/button4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/division" />
+
 </LinearLayout>
