--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -3,48 +3,60 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
     <EditText
         android:id="@+id/num1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="number" />
+        android:text="number"
+        android:textSize="25dp"
+        android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/num2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="number" />
+        android:text="number"
+        android:textSize="25dp"
+        android:textAlignment="center"/>
 
     <TextView
         android:id="@+id/out"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="25dp"
+        android:textAlignment="center"/>
 
     <Button
         android:onClick="plus"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/plus" />
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:text="@string/plus"
+        />
 
     <Button
         android:onClick="minus"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:text="@string/minus" />
 
     <Button
         android:onClick="multiplication"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:text="@string/multiplication" />
 
     <Button
         android:onClick="division"
         android:id="@+id/button4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:text="@string/division" />
 
 </LinearLayout>
