--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="number" />
+    <Button
+        android:layout_width="wrap_content"
+        android:onClick="Activity2"
+        android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/num2"
@@ -46,5 +50,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/division" />
+    <EditText
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="number" />
 
 </LinearLayout>
